--- a/FE/style.css
+++ b/FE/style.css
@@ -26,3 +26,11 @@
     width: 280px;
     height: 60px;
 }
+
+.profile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
