--- a/FE/style.css
+++ b/FE/style.css
@@ -43,3 +43,10 @@
     border: 2px solid #e2336b;
     border-radius: 50%;
 }
+
+.profile-pic img {
+    border-radius: 50%;
+    object-fit: cover;
+    height: 150px;
+    width: 150px;
+}
