--- a/FE/style.css
+++ b/FE/style.css
@@ -74,3 +74,10 @@
 .options .feed-icon, .options a:hover{
     color: #e2336b;
 }
+
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 50px;
+}
