--- a/FE/style.css
+++ b/FE/style.css
@@ -81,3 +81,12 @@
     justify-content: space-between;
     height: 50px;
 }
+
+.search{
+    display:flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    height: 10px;
+    width: 200px;
+}
