Updating style of header options

--- a/FE/style.css
+++ b/FE/style.css
@@ -102,3 +102,11 @@
     display: flex;
     align-items: center;
 }
+
+.header-options .add{
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    text-decoration: none;
+    padding: 5px;
+}
