Updating style of post

--- a/FE/style.css
+++ b/FE/style.css
@@ -152,3 +152,9 @@
     height: 30px;
     width: 30px;
 }
+
+.post-profile{
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
